--- a/public/index.html
+++ b/public/index.html
@@ -1,46 +1,135 @@
-        <!DOCTYPE html>
-        <html lang="pt-BR">
-        <head>
-            <meta charset="UTF-8">
-            <meta name="viewport" content="width=device-width, initial-scale=1.0">
-            <title>Relatório Financeiro Detalhado</title>
-            <link rel="stylesheet" href="style.css">
-        </head>
-        <body>
-            <div class="container">
-                <h1>Relatório Financeiro Detalhado</h1>
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Relatórios Financeiros E-TECH</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div class="container">
+        <h1>Relatórios Financeiros E-TECH</h1>
 
-                <div class="controls">
-                    <label for="dataInicio">Data Início:</label>
-                    <input type="date" id="dataInicio">
+        <!-- Botões de Navegação das Abas -->
+        <div class="tab-navigation">
+            <button class="tab-button active" data-tab="relatorio-diario">Relatório Diário</button>
+            <button class="tab-button" data-tab="dashboard-mensal">Dashboard Mensal</button>
+            <button class="tab-button" data-tab="transferencias">Transferências</button>
+        </div>
 
-                    <label for="dataFim">Data Fim:</label>
-                    <input type="date" id="dataFim">
+        <!-- Seção do Relatório Diário -->
+        <div id="relatorio-diario" class="tab-content active">
+            <h2>Faturamento Detalhado por Período</h2>
+            <div class="controls">
+                <label for="dataInicio">Data Início:</label>
+                <input type="date" id="dataInicio">
 
-                    <button id="fetchReportButton">Carregar Relatório</button>
+                <label for="dataFim">Data Fim:</label>
+                <input type="date" id="dataFim">
+
+                <button id="fetchReportButton">Carregar Relatório</button>
+            </div>
+
+            <div id="status-messages-diario" class="status-messages">
+                <div id="loading-diario" class="message loading-message" style="display: none;">
+                    Carregando dados...
                 </div>
+                <div id="error-diario" class="message error-message" style="display: none;"></div>
+                <div id="no-data-diario" class="message info-message" style="display: none;">Nenhum dado encontrado para o período selecionado.</div>
+            </div>
 
-                <div id="status-messages">
-                    <div id="loading" class="message loading-message" style="display: none;">
-                        Carregando dados...
-                    </div>
-                    <div id="error" class="message error-message" style="display: none;"></div>
-                    <div id="no-data" class="message info-message" style="display: none;">Nenhum dado encontrado para o período selecionado.</div>
+            <div class="table-container">
+                <table id="financialReportTable">
+                    <thead>
+                        <tr>
+                            <!-- Cabeçalhos serão preenchidos via JS -->
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <!-- Dados serão preenchidos via JS -->
+                    </tbody>
+                </table>
+            </div>
+        </div>
+
+        <!-- Seção do Dashboard Mensal -->
+        <div id="dashboard-mensal" class="tab-content" style="display: none;">
+            <h2>Dashboard Mensal</h2>
+            <div class="controls">
+                <label for="dashboardMes">Mês:</label>
+                <select id="dashboardMes"></select>
+                <label for="dashboardAno">Ano:</label>
+                <select id="dashboardAno"></select>
+                <button id="fetchDashboardButton">Ver Dashboard</button>
+            </div>
+
+            <div id="status-messages-dashboard" class="status-messages">
+                <div id="loading-dashboard" class="message loading-message" style="display: none;">
+                    Carregando dashboard...
                 </div>
+                <div id="error-dashboard" class="message error-message" style="display: none;"></div>
+                <div id="no-data-dashboard" class="message info-message" style="display: none;">Nenhum dado encontrado para o mês selecionado.</div>
+            </div>
 
-                <div class="table-container">
-                    <table id="financialReportTable">
+            <div class="dashboard-cards">
+                <!-- Cards de resumo serão preenchidos via JS -->
+            </div>
+
+            <h3>Ticket Médio por Dia</h3>
+            <div class="table-container">
+                <table id="dailyTicketTable">
+                    <thead><tr><th>Dia</th><th>Pagamentos</th><th>Total Recebido</th><th>Ticket Médio</th></tr></thead>
+                    <tbody></tbody>
+                </table>
+            </div>
+
+            <h3>Ticket Médio por Plano (Top 20)</h3>
+            <div class="table-container">
+                <table id="planTicketTable">
+                    <thead><tr><th>Plano</th><th>Pagamentos</th><th>Total Recebido</th><th>Ticket Médio</th></tr></thead>
+                    <tbody></tbody>
+                </table>
+            </div>
+        </div>
+
+        <!-- Seção de Transferências -->
+        <div id="transferencias" class="tab-content" style="display: none;">
+            <h2>Transferências entre Contas</h2>
+            <div class="controls">
+                <label for="transferMes">Mês:</label>
+                <select id="transferMes"></select>
+                <label for="transferAno">Ano:</label>
+                <select id="transferAno"></select>
+                <button id="fetchTransferButton">Gerar Transferências</button>
+            </div>
+
+            <div id="status-messages-transfer" class="status-messages">
+                <div id="loading-transfer" class="message loading-message" style="display: none;">
+                    Gerando transferências...
+                </div>
+                <div id="error-transfer" class="message error-message" style="display: none;"></div>
+                <div id="no-data-transfer" class="message info-message" style="display: none;">Nenhum dado de transferência encontrado para o mês selecionado.</div>
+            </div>
+
+            <div class="transfer-layout">
+                <div class="transfer-table-container table-container">
+                    <table id="transferTable">
                         <thead>
                             <tr>
-                                <!-- Cabeçalhos serão preenchidos via JS -->
+                                <th>Data</th><th>Total Pagamentos</th><th>Valor Total Boleto</th><th>Total Recebido</th>
+                                <th class="scm-header">Total SCM (total)</th><th class="scm-header">SCM -> SCI (Transferir)</th><th class="scm-header">SCM -> SVA (Transferir)</th>
+                                <th class="sva-header">Total SVA (total)</th><th class="sva-header">SVA -> SCM (Transferir)</th><th class="sva-header">SVA -> SCI (Transferir)</th>
                             </tr>
                         </thead>
-                        <tbody>
-                            <!-- Dados serão preenchidos via JS -->
-                        </tbody>
+                        <tbody></tbody>
                     </table>
                 </div>
+                <div id="transfer-panel" class="transfer-panel">
+                    <!-- Painel de transferências diárias será preenchido via JS -->
+                </div>
             </div>
-            <script src="script.js"></script>
-        </body>
-        </html>
+        </div>
+    </div>
+    <script src="script.js"></script>
+</body>
+</html>
